--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,10 @@ button:hover{
     color: orangered;
 } */
 
-@media screen and (max-width: 600px) {
-    
-}
+@media screen and (min-width: 600px) {
+    form{
+    width: 50%;
+    height: 100%;
+  
+    margin: auto;
+}}
